# pyetc

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  setup.cfg
docs/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  tutorial.ipynb
docs/api/: pyetc.etc.ETC.rst  pyetc.etc.asymgauss.rst  pyetc.etc.compute_sky.rst  pyetc.etc.fwhm_asymgauss.rst  pyetc.etc.get_data.rst  pyetc.etc.get_seeing_fwhm.rst  pyetc.etc.moffat.rst  pyetc.etc.peakwave_asymgauss.rst  pyetc.etc.show_noise.rst  pyetc.etc.sigma2vdisp.rst  pyetc.etc.update_skytables.rst  pyetc.etc.vdisp2sigma.rst
notebooks/: MOS_1st_order_parameters.ipynb  WST_ETC.ipynb
pyetc/: __init__.py  etc.py  version.py  vista.py  vlt.py  wst.py
pyetc/data/VLT/: WFM_NONAO_N_noatm.txt  giraffe_blue_brightsky_1.0.fits  giraffe_blue_brightsky_1.2.fits  giraffe_blue_brightsky_1.5.fits  giraffe_blue_brightsky_2.0.fits  giraffe_blue_darksky_1.0.fits  giraffe_blue_darksky_1.2.fits  giraffe_blue_darksky_1.5.fits  giraffe_blue_darksky_2.0.fits  giraffe_blue_greysky_1.0.fits  giraffe_blue_greysky_1.2.fits  giraffe_blue_greysky_1.5.fits  giraffe_blue_greysky_2.0.fits  giraffe_blue_noatm.fits  ifs_blue_brightsky_1.0.fits  ifs_blue_brightsky_1.2.fits  ifs_blue_brightsky_1.5.fits  ifs_blue_brightsky_2.0.fits  ifs_blue_darksky_1.0.fits  ifs_blue_darksky_1.2.fits  ifs_blue_darksky_1.5.fits  ifs_blue_darksky_2.0.fits  (+21 more)
tests/: test_comp.py  test_main.py  test_pointsource.py  test_ps.py  test_resolved_cont.py  test_resolved_line.py  test_sb.py  test_setup.py  test_source.py  test_surface_brightness.py  testmain.py
(+191 files in other folders)
