[metadata]
name = pyetc
author = Roland Bacon
author-email = roland.bacon@univ-lyon1.fr
description = ETC for WST
long_description = file: readme.md
platforms = any
url = https://git-cral.univ-lyon1.fr/MUSE/pyetc
license = BSD
classifier =
    Development Status : 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy'

[options]
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    astropy
    mpdaf
    numpy
    spextra

[options.packages.find]
exclude =
    tests
    tests.*
    
[isort]
multi_line_output = 3
include_trailing_comma = True

[flake8]
max-line-length = 88

[options.entry_points]


